--- a/estilos.css
+++ b/estilos.css
@@ -130,3 +130,105 @@ body {
   height: auto;
 }
 
+.column {
+    width: 100%;
+}
+
+@media (min-width:600px) {
+    .column {
+        width: 50%;
+    }
+} 
+
+<style>
+  main {
+    background: #d9d7d5;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  div {
+    background: #767775;
+    flex-basis: 100%;
+    height: 100px;
+    margin-bottom: 0.5rem;
+  }
+
+  @media (min-width: 600px) {
+    main {
+      flex-wrap: nowrap;
+    }
+
+    div {
+      flex-basis: 33%;
+    }
+  }
+</style>
+<main>
+  <div></div>
+  <div></div>
+  <div></div>
+</main>
+
+<style>
+  menu {
+    background: #d9d7d5;
+    padding: 0.25rem;
+    overflow-y: scroll;
+    white-space: nowrap;
+  }
+
+  span {
+    background: #767775;
+    color: #ffffff;
+    display: inline-block;
+    margin: 0.25rem;
+    padding: 0.5rem;
+  }
+</style>
+<menu>
+  <span>Deseño Responsive Web</span>
+  <span>RWD</span>
+  <span>menú Responsive</span>
+  <span>Ejemplo Overflow scroll</span>
+  <span>¡Esto es mucho contenido!</span>
+  <span>Si</span>
+  <span>Nosotros</span>
+  <span>tenemos</span>
+  <span>otro</span>
+  <span>elemento</span>
+</menu>
+
+<style>
+  img {
+    max-width: 100%;
+  }
+</style>
+
+<picture>
+  <source type="image/webp" srcset="https://my-image.com/my-image-100.webp 1x, https://my-image.com/my-image-200.webp 2x">
+  <source type="image/png" srcset="https://my-image.com/my-image-100.png 1x, https://my-image.com/my-image-200.png 2x">
+  <img alt="my image" src="https://my-image.com/my-image-200.png" loading="lazy" width="100" height="100">
+</picture>
+
+<style>
+  .videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+  }
+
+  .videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+</style>
+
+<div class="videoWrapper">
+  <!-- Copy & Pasted from YouTube -->
+  <iframe width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+</div>
